--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+/* css properites for nav bar */
 .navbar-a {
     display: flex;
     justify-content: space-between;
@@ -7,4 +9,27 @@
      height: 100%;
      width: 30px;
      margin: 20px;
-} 
+     
+    } 
+    .navbar-brand {
+        color: white;
+     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     font-size: 30px;
+     font-weight: 600px;
+
+    }
+    .nav-content a {
+        margin: 15px;
+        text-decoration: none;
+        font-size: larger;
+        color: white;
+    }
+
+    .profile-pic {
+        width: 300px;
+        border-radius: 300px;
+        align-items: flex-end;
+    }
+    .text-1 p{
+        font-size: small;
+    }
