--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,11 @@ a img:hover {
     border-radius: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.card {
+.card-img-bottom {
     transition: transform 0.3s ease-in-out;
   }
 
-  .card:hover {
+  .card-img-bottom:hover {
     transform: scale(1.1);
   }
 
